--- a/website/angular/views/portal/settings.html
+++ b/website/angular/views/portal/settings.html
@@ -64,7 +64,7 @@
                         <br>
                         <label>Your Birthday</label>
                         <div class="form-inline" id="birth-date">
-                            <select id="profile_date_year" name="profile[date][year]" class="form-control" ng-model="data.dob.year">
+                            <select id="profile_date_year" name="profile[date][year]" class="form-control" ng-model="data.year" ng-init="data.year = user.profile.dob.year">
                                 <option value="" selected="selected">Year</option>
                                 <option value="2003">2003</option>
                                 <option value="2002">2002</option>
@@ -180,22 +180,22 @@
                                 <option value="1892">1892</option>
                                 <option value="1891">1891</option>
                             </select>
-                            <select id="profile_date_month" name="profile[date][month]" class="form-control" ng-model="data.dob.month">
+                            <select id="profile_date_month" name="profile[date][month]" class="form-control" ng-model="data.month" ng-init="data.month = user.profile.dob.month">
                                 <option value="" selected="selected">Month</option>
-                                <option value="1">January</option>
-                                <option value="2">February</option>
-                                <option value="3">March</option>
-                                <option value="4">April</option>
-                                <option value="5">May</option>
-                                <option value="6">June</option>
-                                <option value="7">July</option>
-                                <option value="8">August</option>
-                                <option value="9">September</option>
-                                <option value="10">October</option>
-                                <option value="11">November</option>
-                                <option value="12">December</option>
+                                <option value="0">January</option>
+                                <option value="1">February</option>
+                                <option value="2">March</option>
+                                <option value="3">April</option>
+                                <option value="4">May</option>
+                                <option value="5">June</option>
+                                <option value="6">July</option>
+                                <option value="7">August</option>
+                                <option value="8">September</option>
+                                <option value="9">October</option>
+                                <option value="10">November</option>
+                                <option value="11">December</option>
                             </select>
-                            <select id="profile_date_day" name="profile[date][day]" class="form-control" ng-model="data.dob.day">
+                            <select id="profile_date_day" name="profile[date][day]" class="form-control" ng-model="data.day" ng-init="data.day = user.profile.dob.day">
                                 <option value="" selected="selected">Day</option>
                                 <option value="1">1</option>
                                 <option value="2">2</option>
